minor bugfix for overflowing price description [APPDEV-2428]
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@18268 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/product_grid.css
+++ b/projects/Media/docroot/assets/css/common/product_grid.css
@@ -38,7 +38,6 @@
 .grid-item-image .burst-back {
 	width:35px;
 	height:35px;
-	display:none;
 	position:absolute;
 	top:0px;
 	left:0px;
@@ -111,8 +110,8 @@
 
 .grid-item-price-description {
 	font-size:11px;
-	height:2em;
-	line-height:1.5em;
+	height:2.6em;
+	line-height:1.3em;
 	position:relative;
 	overflow:hidden;
 }
